<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity" android:background="@color/bgColor">

    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/log_email" android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:background="@drawable/bg_edittext_rounded" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:importantForAutofill="no"
            tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute"
            android:paddingLeft="8dp" app:layout_constraintTop_toBottomOf="@+id/logoImage"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/log_password"
            android:hint="@string/password"
            android:background="@drawable/bg_edittext_rounded"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/log_email"
            app:layout_constraintStart_toStartOf="@+id/log_email" app:layout_constraintEnd_toEndOf="@+id/log_email"
            android:importantForAutofill="no" tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" android:paddingLeft="8dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/log_password"
            app:layout_constraintEnd_toEndOf="@+id/log_password"
            app:layout_constraintStart_toStartOf="@+id/log_password" android:background="@drawable/bg_button_rounded"/>
    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_account"
            android:textSize="14sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textStyle="bold"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/kofi_logo"
            android:id="@+id/logoImage" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/image_logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>